# cpp-xplatform

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  dev-build-all.bat  dev-build-all.sh
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
assets/: README.md
assets/test-files/: test-asset-finding.txt
cmake/: README.md
docs/: README.md
docs/help/: APPVEYOR.md  CMAKE.md  EDITORCONFIG.md  FAQ.md  GIT_ATTRIBUTES.md  GIT_IGNORE.md  GIT_MODULES.md  TRAVIS_CI.md
examples/: README.md
include/cpp-xplatform/: README.md
include/cpp-xplatform/utils/: string-utils.hpp
include/project-name/utils/: string-utils.hpp
scripts/: README.md  dev-build-all.bat  dev-build-all.sh  run-external-tests.bat  run-external-tests.sh  run-internal-tests.bat  run-internal-tests.sh  travis-nul.txt
scripts/dev/test/unix-makefiles/: run-external-tests.sh  run-internal-tests.sh
scripts/dev/test/vs2017/: run-external-tests.bat  run-external-tests.sh  run-internal-tests.bat  run-internal-tests.sh
src/: README.md  main.cpp  pch.h
src/utils/: string-utils.hpp
tests/: CMakeLists.txt  README.md  common.test.h  main.test.cpp
tests/utils/: string-utils.test.cpp
